; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_menelaus.c_menelaus_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_menelaus.c_menelaus_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.menelaus_chip = type { i32 }

@the_menelaus = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @menelaus_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @menelaus_remove(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.menelaus_chip*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %4 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %5 = call %struct.menelaus_chip* @i2c_get_clientdata(%struct.i2c_client* %4)
  store %struct.menelaus_chip* %5, %struct.menelaus_chip** %3, align 8
  %6 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %7 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.menelaus_chip*, %struct.menelaus_chip** %3, align 8
  %10 = call i32 @free_irq(i32 %8, %struct.menelaus_chip* %9)
  %11 = load %struct.menelaus_chip*, %struct.menelaus_chip** %3, align 8
  %12 = getelementptr inbounds %struct.menelaus_chip, %struct.menelaus_chip* %11, i32 0, i32 0
  %13 = call i32 @flush_work(i32* %12)
  store i32* null, i32** @the_menelaus, align 8
  ret i32 0
}

declare dso_local %struct.menelaus_chip* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @free_irq(i32, %struct.menelaus_chip*) #1

declare dso_local i32 @flush_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
